// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connector configuredRoutes getRoutes based on index path 1`] = `
Object {
  "exact": false,
  "path": "/",
  "root": true,
  "routes": Array [
    Object {
      "component": [Function],
      "exact": false,
      "path": "/a",
      "routes": Array [
        Object {
          "component": [Function],
          "exact": true,
          "path": "/a/1",
          "routes": Array [],
        },
        Object {
          "component": [Function],
          "exact": false,
          "path": "/a/2",
          "routes": Array [
            Object {
              "component": [Function],
              "exact": true,
              "path": "/a/2/1",
              "routes": Array [],
            },
          ],
        },
      ],
    },
    Object {
      "component": [Function],
      "exact": true,
      "path": "/ab/2/1",
      "routes": Array [],
    },
    Object {
      "component": [Function],
      "exact": true,
      "path": "/b/1",
      "routes": Array [],
    },
    Object {
      "component": [Function],
      "exact": true,
      "path": "/b/login/register",
      "routes": Array [],
    },
  ],
}
`;

exports[`connector routes check configurable routes 1`] = `
Array [
  <Switch>
    <Route
      exact={false}
      path="/"
      render={[Function]}
      strict={undefined}
    />
  </Switch>,
]
`;

exports[`connector routes check static routes 1`] = `
Array [
  <Route
    component={[Function]}
    exact={true}
    path="/static1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/static2"
  />,
  <Switch>
    <Route
      exact={false}
      path="/"
      render={[Function]}
      strict={undefined}
    />
  </Switch>,
]
`;

exports[`connector routes merge static routes and configurable routes 1`] = `
Array [
  <Route
    component={[Function]}
    exact={true}
    path="/static1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/static2"
  />,
  <Switch>
    <Route
      exact={false}
      path="/"
      render={[Function]}
      strict={undefined}
    />
  </Switch>,
]
`;

exports[`loading success 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"timedOut":false,"error":null}
</div>
`;

exports[`loading success 2`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":true,"timedOut":false,"error":null}
</div>
`;

exports[`loading success 3`] = `
<div>
  MyComponent 
  {"prop":"foo"}
</div>
`;

exports[`loading success 4`] = `
<div>
  MyComponent 
  {"prop":"bar"}
</div>
`;

exports[`routeConfig getRoutes getRoutes based on index path 1`] = `
Object {
  "exact": false,
  "path": "/a",
  "root": true,
  "routes": Array [
    Object {
      "component": [Function],
      "exact": true,
      "path": "/a/1",
      "routes": Array [],
    },
    Object {
      "component": [Function],
      "exact": false,
      "path": "/a/2",
      "routes": Array [
        Object {
          "component": [Function],
          "exact": true,
          "path": "/a/2/1",
          "routes": Array [],
        },
      ],
    },
    Object {
      "component": [Function],
      "exact": true,
      "path": "/ab/2/1",
      "routes": Array [],
    },
  ],
}
`;

exports[`routeConfig getRoutes getRoutes based on index path 2`] = `
Object {
  "exact": false,
  "path": "/",
  "root": true,
  "routes": Array [
    Object {
      "component": [Function],
      "exact": false,
      "path": "/a",
      "routes": Array [
        Object {
          "component": [Function],
          "exact": true,
          "path": "/a/1",
          "routes": Array [],
        },
        Object {
          "component": [Function],
          "exact": false,
          "path": "/a/2",
          "routes": Array [
            Object {
              "component": [Function],
              "exact": true,
              "path": "/a/2/1",
              "routes": Array [],
            },
          ],
        },
      ],
    },
    Object {
      "component": [Function],
      "exact": true,
      "path": "/ab/2/1",
      "routes": Array [],
    },
    Object {
      "component": [Function],
      "exact": true,
      "path": "/b/1",
      "routes": Array [],
    },
    Object {
      "component": [Function],
      "exact": true,
      "path": "/b/login/register",
      "routes": Array [],
    },
  ],
}
`;
